--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src=""C:\Users\abhilash gaddam\Pictures\photo.jpeg"" alt="ABHI personal"></td>
+        <td><img src=""https://github.com/Abhi7112/cv/blob/main/photo.jpeg"" alt="ABHI personal"></td>
         <td><h1>abhilash</h1>
         <p><em>student of <strong><a href="https://www.google.com/search?gs_ssp=eJzj4tVP1zc0TCopjy82LUk3YPTiLskuUkjOz8lJTU8FAIAUCUA&q=tkr+college&rlz=1C1CHBD_en-GBIN1022IN1022&oq=tkr+&aqs=chrome.1.69i57j46i433i512j0i512j46i175i199i512l2j0i433j0i131i433j46i175i199i512j0i512.3251j0j15&sourceid=chrome&ie=UTF-8">tkr college</a></strong></em></p>
         <p>this is where oue second para should be about us</p></td>
